/*
 * This file is part of Atlas-DB.
 *
 * Atlas-DB is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of
 * the License, or (at your option) any later version.
 *
 * Atlas-DB is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Atlas-DB. If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package atlas.bootstrap;

option go_package = "/bootstrap";

service Bootstrap {
  rpc GetBootstrapData(BootstrapRequest) returns (stream BootstrapResponse) {}
}

message BootstrapRequest {
  int64 version = 1;
}

message IncompatibleVersion {
  int64 needsVersion = 1;
}

message BootstrapData {
  int64 version = 1;
  bytes data = 2;
}

message BootstrapResponse {
  oneof response {
    IncompatibleVersion incompatibleVersion = 1;
    BootstrapData bootstrapData = 2;
  }
}
